--- a/site/google.css
+++ b/site/google.css
@@ -1,42 +1,158 @@
-.container {
-	text-align: center;
+* {
+  margin: 0;
 }
 
-img {
-	margin-top:25%;
+html, body {
+  height: 100%;
 }
 
-input {
-	width: 500px;
-	height: 35px;
-	margin: 4px;
-	padding: 8px;
-	border: 1px solid grey;
-	border-radius: 25px;
+body {
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
-.btn1 {
-	height: 40px;
-	width: auto;
-	color: #646464;
-	background: #f2f2f2;
-	border:none;
-	cursor: pointer;
-	margin:4px;
+.top-bar {
+  display: flex;
+  align-items: center;
+  padding: 20px 30px;
 }
 
-.btn2 {
-	margin:4px;
-	height: 40px;
-	width: auto;
-	color: #646464;
-	background: #f2f2f2;
-	border:none;
-	cursor: pointer;
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.btn1:hover, .btn2:hover {
-	color:#373737;
-	background: #D3D3D3;
-	border: .5px solid lightgrey;
+.bar-left {
+  display: flex;
+  align-items: center;
+}
+
+.bar-right {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+}
+
+.menu a {
+  color: #2d2d2d;
+  text-decoration: none;
+  margin-right: 15px;
+}
+
+.menu a:hover {
+  text-decoration: underline;
+}
+
+.app-toggle {
+  margin-right: 15px;
+  text-decoration: none;
+  color: #2d2d2d;
+  font-size: 25px;
+}
+
+.profile-trigger img {
+  width: 40px;
+  height: 50px;
+  border-radius: 100%;
+}
+
+.search-wrapper {
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.search-logo img {
+  width: 400px;
+}
+
+.search-bar {
+  margin: 30px 0;
+  position: relative;
+  width: 100%;
+}
+
+.search-bar input {
+  height: 50px;
+  width: 100%;
+  border: 1px solid #d0d0d0;
+  border-radius: 100px;
+  padding: 0 50px;
+  outline: 0;
+  box-shadow: 0 0 0 0 rgba(136, 136, 136, 0);
+  font-size: 18px;
+  transition: box-shadow .3s;
+}
+
+.search-bar input:focus {
+  box-shadow: 0 0 10px -4px #888888;
+}
+
+.search-bar .search-icon {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  display: flex;
+  font-size: 20px;
+  color: #888888;
+}
+
+.search-bar .search-icon.right {
+  right: 0;
+}
+
+.search-info {
+  font-size: 15px;
+}
+
+.search-info a {
+  color: #3f50b5;
+  text-decoration: none;
+}
+
+.search-info a:hover {
+  text-decoration: underline;
+}
+
+.search-buttons {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.search-buttons a {
+  text-decoration: none;
+  margin-right: 15px;
+  background-color: #ececec;
+  color: black;
+  padding: 10px 15px;
+  border-radius: 3px;
+  border: 1px solid rgba(0, 0, 0, 0);
+}
+
+.search-buttons a:last-child {
+  margin-right: 0;
+}
+
+.search-buttons a:hover {
+  border: 1px solid #8c8c8c;
+}
+
+.bottom-bar {
+  display: flex;
+  align-items: center;
+  padding: 20px 30px;
+  background-color: #ececec;
+  border-top: 1px solid #d4d4d4;
 }
