--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,18 +1,27 @@
 * {
 	box-sizing: border-box;
+	font-size:120px;
 }
 
 h1{
 	text-align:center;
+	font-size: 75%
 }
 
 h3 {
-	text-align:right;
-	padding: 10px;
+	border: 1px solid black;
+	width: 150px;
+	margin-right: 5px;
+	float: right;
+	font-size: 25%;
+	text-align:center;
+	
 }
 
 p {
+	font-size: 12%;
 	padding: 10px;
+	clear: both;
 }
 
 h1, h3, p{
@@ -29,7 +38,7 @@ h1, h3, p{
 @media (min-width: 992px) {
 	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
 		float:left;
-		border: 1px solid lightgray;
+		border: 1px solid black;
 		background: #f2f7f4;
 		margin-bottom: 5px;
 		margin-right: 1px;
@@ -78,7 +87,7 @@ h1, h3, p{
 @media (min-width: 768px) and (max-width: 991px) {
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
 		float:left;
-		border: 1px solid lightgray;
+		border: 1px solid black;
 		background: #f2f7f4;
 		margin-bottom: 5px;
 
@@ -122,6 +131,8 @@ h1, h3, p{
 
 .col-md-6:last-child {
 	width: 100%;
+	clear: both;
+}
 }
 }
 
@@ -130,8 +141,8 @@ h1, h3, p{
 @media (max-width: 767px) {
 	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
 		float:left;
-		border: 1px solid lightgray;
-		background: #f2f7f4;
+		border: 1px solid black;
+		background-color: #f2f7f4;
 		margin-bottom: 5px;
 
 	}
