--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -1,5 +1,5 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -37,7 +37,7 @@ body {
   margin-top: 10px;
 }
 #nav-list a {
-  color: #951C49;
+  color: #fff;
   text-align: center;
 }
 #nav-list a:hover {
@@ -60,22 +60,30 @@ h2 {
 	margin: 15px auto;
 }
 
-.menu-box{
-  height: 300px;
-  width: 100%;
+.menu-box {
+  height: 250px;
   padding: 0 5px 0 5px;
-  background-color:#0398BD; 
+  background-color:#0398BD;
   position: relative;
   border: 2px solid #000;
+  margin-bottom: 5px;
   overflow: hidden;
 }
 
-.menu-box h3{
+.menu-box h3 {
 	text-align: center;
 }
 
+/********** Medium Size devices only **********/
+
+@media (min-width: 992px) and (max-width: 1199px){
+
+  
+
+}
+
 /********** Extra small devices only **********/
-@media (max-width: 767px) {
+@media (min-width: 768px) and (max-width: 991px){
   /* Header */
   .navbar-brand {
     padding-top: 10px;
@@ -90,6 +98,9 @@ h2 {
     margin-top: 12px;
   }
   
+  .menu-box:last-child {
+     width: 100%;
+     clear:both;
   }
 
   #collapsable-nav a { /* Collapsed nav menu text */
@@ -100,5 +111,5 @@ h2 {
     margin-right: 5px;
   } 
   
-
+}
   
